# Raspberry_SmartLights

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/routes/: led_control.py
app/services/: data_transfer.py
frontend/: index.html  script.js  style.css
pico/: colorwave.py  main.py
pico/controllers/: builtin_led_controller.py  led_strip_controller.py
